Add 'use_zram' option to kernel-a12 workflow configuration

--- a/.github/workflows/kernel-a12.yml
+++ b/.github/workflows/kernel-a12.yml
@@ -17,6 +17,10 @@ on:
         required: false
         type: string
         default: ""
+      use_zram:
+        required: false
+        type: boolean
+        default: true
 
 jobs:
   build-kernels-a12:
