--- a/.github/workflows/kernel-a12.yml
+++ b/.github/workflows/kernel-a12.yml
@@ -69,3 +69,4 @@ jobs:
       kernelsu_variant: ${{ inputs.kernelsu_variant }}
       kernelsu_branch: ${{ inputs.kernelsu_branch }}
       kernelsu_branch_other: ${{ inputs.kernelsu_branch_other || '' }}
+      use_zram: ${{ inputs.use_zram }}
