Update 'use_zram' parameter to be required in kernel-a12 and main workflows

--- a/.github/workflows/kernel-a12.yml
+++ b/.github/workflows/kernel-a12.yml
@@ -18,7 +18,7 @@ on:
         type: string
         default: ""
       use_zram:
-        required: false
+        required: true
         type: boolean
         default: true
 
